# qr-svg-prettify

./: README.md  pyproject.toml
scripts/: prettify.py
src/qrsvgpy/: prettify.py  utils.py
