[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrsvgpy"
version = "0.1.0"
description = "A tool for processing SVG files"
readme = "README.md"
authors = [
    {name = "Ben Kaye", email = "benkaye001@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
